<resources>
<string name="abc_action_bar_home_description">Navigate home</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_action_menu_overflow_description">More options</string>
<string name="abc_action_mode_done">Done</string>
<string name="abc_activity_chooser_view_see_all">See all</string>
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<string name="abc_capital_off">OFF</string>
<string name="abc_capital_on">ON</string>
<string name="abc_menu_alt_shortcut_label">Alt+</string>
<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
<string name="abc_menu_delete_shortcut_label">delete</string>
<string name="abc_menu_enter_shortcut_label">enter</string>
<string name="abc_menu_function_shortcut_label">Function+</string>
<string name="abc_menu_meta_shortcut_label">Meta+</string>
<string name="abc_menu_shift_shortcut_label">Shift+</string>
<string name="abc_menu_space_shortcut_label">space</string>
<string name="abc_menu_sym_shortcut_label">Sym+</string>
<string name="abc_prepend_shortcut_label">Menu+</string>
<string name="abc_search_hint">Search…</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_query">Search query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abc_shareactionprovider_share_with">Share with</string>
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<string name="abc_toolbar_collapse_description">Collapse</string>
<string name="about_description">© 2023 iMax</string>
<string name="about_version">Version 5.6</string>
<string name="about_website">www.imaxbms.com</string>
<string name="activity_about">درباره آی‌مکس</string>
<string name="activity_add_program">برنامه جدید</string>
<string name="activity_add_scenario">سناریو جدید</string>
<string name="activity_backups">پشتیبان‌های موجود</string>
<string name="activity_control_inputs">ورودی‌ها</string>
<string name="activity_control_switches">خروجی‌ها</string>
<string name="activity_edit_scenario">ویرایش سناریو</string>
<string name="activity_otp_sms">ورود به حساب کاربری</string>
<string name="activity_select_device_switch">انتخاب دستگاه و خروجی‌ها</string>
<string name="activity_select_switch">انتخاب خروجی</string>
<string name="activity_select_switch_icon">انتخاب آیکن</string>
<string name="activity_set_switch">تنظیم خروجی</string>
<string name="add_sim_card_device">برای افزودن دستگاه سیمکارتی یا توسط QR-Code اینجا را لمس کنید.</string>
<string name="androidx_startup">androidx.startup</string>
<string name="app_name">iMax</string>
<string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
<string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
<string name="bottomsheet_action_expand_halfway">Expand halfway</string>
<string name="bssid_title">BSSID:</string>
<string name="build_vlc_revision">cb877634a</string>
<string name="cancel">انصراف</string>
<string name="center">Center</string>
<string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
<string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
<string name="character_counter_pattern">%1$d/%2$d</string>
<string name="chip_text">Chip text</string>
<string name="clear_text_end_icon_content_description">Clear text</string>
<string name="close">بستن</string>
<string name="common_google_play_services_enable_button">Enable</string>
<string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
<string name="common_google_play_services_enable_title">Enable Google Play services</string>
<string name="common_google_play_services_install_button">Install</string>
<string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
<string name="common_google_play_services_install_title">Get Google Play services</string>
<string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
<string name="common_google_play_services_notification_ticker">Google Play services error</string>
<string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
<string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
<string name="common_google_play_services_update_button">Update</string>
<string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
<string name="common_google_play_services_update_title">Update Google Play services</string>
<string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
<string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
<string name="common_open_on_phone">Open on phone</string>
<string name="common_signin_button_text">Sign in</string>
<string name="common_signin_button_text_long">Sign in with Google</string>
<string name="confirm">تایید</string>
<string name="connection_connected_to">Connected to</string>
<string name="connection_connecting_to">Connecting to</string>
<string name="connection_disconnected_from">Disconnected from</string>
<string name="connection_disconnecting_from">Disconnecting from</string>
<string name="connection_error_connecting_to">An error occurred connecting to</string>
<string name="connection_unknown_status">Unknown connection status to</string>
<string name="continued">ادامه</string>
<string name="crop_image_menu_crop">Crop</string>
<string name="default_notification_channel_id">Najva_high_priority</string>
<string name="device_count_title">Device count:</string>
<string name="dialog_hint_backup_name">نام مورد نظر را وارد کنید</string>
<string name="dialog_hint_partner_mobile">شماره همراه یا ایمیل مخاطب را وارد کنید</string>
<string name="dialog_learn_remote_message">پس از زدن دکمه یادگیری، ریموت را مقابل دستگاه نگه دارید و دکمه مورد نظر را بفشارید</string>
<string name="dialog_learn_remote_message_2">لطفا دکمه ریموت را بفشارید</string>
<string name="dialog_learn_remote_title">یادگیری</string>
<string name="dialog_learn_switch_remote_message">سوئیچ را مطابق راهنمای مربوطه در وضعیت یادگیری قرار دهید و گزینه یادگیری را انتخاب نمایید</string>
<string name="dialog_learn_switch_remote_message_2">آیا یادگیری به درستی انجام شد؟</string>
<string name="dialog_network_address_title">تنظیمات شبکه</string>
<string name="dialog_text_delay">مدت تاخیر</string>
<string name="dialog_text_picker_title">انتخاب نام</string>
<string name="dialog_text_time_setup">بروزرسانی زمان</string>
<string name="dialog_title_backup_name">نام فایل پشتیبان</string>
<string name="dialog_title_custom_remote_name">نام ریموت دلخواه</string>
<string name="dialog_title_dimmer_name">نام دیمر</string>
<string name="dialog_title_fan_coil_name">نام فن کویل</string>
<string name="dialog_title_humidity_name">نام کنترل رطوبت</string>
<string name="dialog_title_output_name">نام خروجی</string>
<string name="dialog_title_partner_mobile">اشتراک با مخاطب دیگر</string>
<string name="dialog_title_password">لطفا رمز ورود را وارد کنید</string>
<string name="dialog_title_power_plant_name">نام موتورخانه</string>
<string name="dialog_title_rgb_name">نام RGB</string>
<string name="dialog_title_room_name">نام اتاق</string>
<string name="dialog_title_switch_camera_name">نام دوربین</string>
<string name="dialog_title_switch_name">نام کلید</string>
<string name="dialog_title_switch_remote_name">نام کلید بیسیم</string>
<string name="dialog_title_switch_scenario_name">نام کلید سناریو</string>
<string name="dialog_title_thermostat_name">نام ترموستات</string>
<string name="dialog_title_tv_name">نام تلویزیون</string>
<string name="disable">غیرفعال</string>
<string name="empty_mobile_text">لطفا شماره موبایل را وارد کنید</string>
<string name="enable">فعال</string>
<string name="error_icon_content_description">Error</string>
<string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
<string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
<string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
<string name="font_iransans">fonts/IRANSansMobile.ttf</string>
<string name="gps_network_not_enabled">سرویس مکان غیر فعال است</string>
<string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
<string name="hint_program_name">نام برنامه</string>
<string name="hint_scenario_name">نام سناریو</string>
<string name="ic_flip_24">Flip</string>
<string name="ic_flip_24_horizontally">Flip horizontally</string>
<string name="ic_flip_24_vertically">Flip vertically</string>
<string name="ic_rotate_left_24">Rotate counter clockwise</string>
<string name="ic_rotate_right_24">Rotate</string>
<string name="icon_content_description">Dialog Icon</string>
<string name="invalid_email_text">آدرس ایمیل صحیح نمی‌باشد</string>
<string name="invalid_mobile_or_email_text">آدرس ایمیل یا شماره موبایل صحیح نمی‌باشد</string>
<string name="invalid_mobile_text">شماره موبایل صحیح نمی‌باشد</string>
<string name="item_add">افزودن</string>
<string name="item_add_appliance">افزودن تجهیزات</string>
<string name="item_add_bus_scenario">اختصاص به سناریو تحت باس</string>
<string name="item_add_ext_scenario">اختصاص به سناریو خارجی</string>
<string name="item_device_connect_network">اتصال به شبکه</string>
<string name="item_device_inputs_setting">تنظیم ورودی‌ها</string>
<string name="item_device_inputs_status">وضعیت ورودی‌ها</string>
<string name="item_device_network">تنظیمات شبکه</string>
<string name="item_device_notification">اعلان</string>
<string name="item_lock_device">قفل</string>
<string name="item_remote_events_setting">تنظیم سناریو رویداد</string>
<string name="item_remove_device">حذف</string>
<string name="item_set_bus_master">درگاه اتصال</string>
<string name="item_setup_time">بروزرسانی زمان</string>
<string name="item_update_device">بروزرسانی سرویس‌دهنده</string>
<string name="item_update_local_ip">بروزرسانی IP محلی</string>
<string name="limited_access">دسترسی محدود</string>
<string name="package_broadcast">Broadcast</string>
<string name="package_multicast">Multicast</string>
<string name="password_title">Password:</string>
<string name="ssid_title">SSID:</string>
<string name="template_clock_value">23:59</string>
<string name="template_delay_fa">تاخیر</string>
<string name="template_delay_value">0.5 ثانیه</string>
<string name="template_device_serial">UR-######</string>
<string name="template_fri">ج</string>
<string name="template_mon">د</string>
<string name="template_sat">ش</string>
<string name="template_sun">ی</string>
<string name="template_temp_05">5 °C</string>
<string name="template_temp_25">25 °C</string>
<string name="template_temp_fl">25.5 °C</string>
<string name="template_thermostat_output_number">T#</string>
<string name="template_thu">پ</string>
<string name="template_title">Title</string>
<string name="template_tue">س</string>
<string name="template_wed">چ</string>
<string name="thermostat_diff_temp">تفاضل دما</string>
<string name="thermostat_sett_temp">دمای تنظیم</string>
<string name="warning_limited_access">پس از بازگردانی پشتیبان با دسترسی محدود، امکان ویرایش و دسترسی مدیر در اپلیکیشن وجود نخواهد داشت.</string>
</resources>