<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@id/parent_layout" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<RelativeLayout android:id="@id/card_view_border" android:background="@drawable/bg_rounded" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip">
		<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="6.0dip" android:elevation="4.0dip" app:cardCornerRadius="4.0dip">
			<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
				<LinearLayout android:orientation="horizontal" android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="rtl">
					<TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
						<TableRow android:layout_width="fill_parent" android:layout_height="fill_parent">
							<TextView android:id="@id/text_view_sett_temp_title" android:layout_width="70.0dip" android:layout_height="wrap_content" android:layout_column="1" android:text="@string/thermostat_sett_temp" />
							<TextView android:textSize="17.0sp" android:id="@id/text_view_sett_temp" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="2" android:text="@string/template_temp_25" />
						</TableRow>
						<TableRow android:layout_marginTop="10.0dip">
							<TextView android:id="@id/text_view_diff_temp_title" android:layout_width="70.0dip" android:layout_height="wrap_content" android:layout_column="1" android:text="@string/thermostat_diff_temp" />
							<TextView android:textSize="17.0sp" android:id="@id/text_view_diff_temp" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="2" android:text="@string/template_temp_05" />
						</TableRow>
					</TableLayout>
					<Space android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
					<ImageView android:layout_gravity="center_vertical" android:id="@id/image_view_thermostat_mode" android:focusable="true" android:clickable="true" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/sun" android:contentDescription="@null" />
					<Space android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
					<LinearLayout android:gravity="center" android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
						<TextView android:textSize="20.0sp" android:id="@id/text_view_current_temp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template_temp_fl" />
						<ImageView android:id="@id/image_view_status" android:background="#ff0fa60f" android:layout_width="70.0dip" android:layout_height="10.0dip" android:layout_marginTop="5.0dip" android:contentDescription="@null" />
					</LinearLayout>
					<Space android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
					<androidx.appcompat.widget.AppCompatTextView android:textSize="24.0sp" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/text_view_output_number" android:focusable="true" android:clickable="true" android:layout_width="60.0dip" android:layout_height="60.0dip" android:text="@string/template_thermostat_output_number" android:textAlignment="center" app:autoSizeTextType="uniform" />
				</LinearLayout>
				<TextView android:id="@id/text_view_device_serial" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="4.0dip" android:text="" />
			</LinearLayout>
		</androidx.cardview.widget.CardView>
	</RelativeLayout>
</RelativeLayout>
