<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<androidx.appcompat.widget.Toolbar android:id="@id/about_toolbar" android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:titleTextColor="@color/colorWhite" />
	<ImageView android:id="@id/image_view_logo" android:layout_width="100.0dip" android:layout_height="100.0dip" android:src="@mipmap/ic_launcher" android:layout_centerInParent="true" android:contentDescription="@null" />
	<TextView android:textSize="20.0sp" android:textStyle="bold" android:id="@id/text_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/about_description" android:layout_below="@id/image_view_logo" android:layout_centerHorizontal="true" />
	<TextView android:textSize="17.0sp" android:textStyle="italic" android:id="@id/text_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/about_version" android:layout_below="@id/text_description" android:layout_centerHorizontal="true" />
	<TextView android:textSize="20.0sp" android:textStyle="normal" android:textColor="@color/colorAccent" android:id="@id/text_website" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/about_website" android:layout_below="@id/text_version" android:layout_centerHorizontal="true" />
</RelativeLayout>
