<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/smart_back" android:padding="56.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
		<ImageView android:background="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="1.0dip" android:contentDescription="@null" />
		<TextView android:textSize="19.0sp" android:textColor="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="برای تنظیم شدن دستگاه‌ها رمز WiFi را وارد کنید" android:textAlignment="center" />
		<ImageView android:background="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="1.0dip" android:contentDescription="@null" />
	</LinearLayout>
	<EditText android:textColor="#d2ffffff" android:textColorHint="#d2cecece" android:id="@id/ap_ssid_text" android:background="@drawable/rounded_border_edit_text" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="34.0dip" android:layout_marginTop="40.0dip" android:hint="SSID" android:drawableLeft="@drawable/ic_wifi_white_24dp" android:drawablePadding="10.0dip" android:inputType="text" />
	<EditText android:textColor="#d2ffffff" android:textColorHint="#d2cecece" android:id="@id/ap_password_edit" android:background="@drawable/rounded_border_edit_text" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="34.0dip" android:layout_marginTop="15.0dip" android:hint="WiFi password" android:drawableLeft="@drawable/ic_lock_outline_white_24dp" android:drawablePadding="10.0dip" android:inputType="textVisiblePassword" />
	<TextView android:textColor="@color/white" android:id="@id/btn_add_sim_card_device" android:background="@drawable/bg_rounded_gray_transparent" android:padding="10.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/add_sim_card_device" android:drawableTop="@drawable/ic_baseline_sim_card_24" android:drawablePadding="5.0dip" android:textAlignment="center" android:layoutDirection="rtl" />
	<pl.bclogic.pulsator4droid.library.PulsatorLayout android:id="@id/pulsator" android:layout_width="fill_parent" android:layout_height="fill_parent" app:pulse_color="@color/colorWhite" app:pulse_count="4" app:pulse_duration="3000" app:pulse_interpolator="Accelerate" app:pulse_repeat="0" app:pulse_startFromScratch="false">
		<Button android:textSize="18.0sp" android:textColor="#d2ffffff" android:id="@id/confirm_btn" android:background="@drawable/button_bg_round" android:padding="5.0dip" android:layout_width="80.0dip" android:layout_height="80.0dip" android:text="تنظیم" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
	</pl.bclogic.pulsator4droid.library.PulsatorLayout>
	<LinearLayout android:orientation="vertical" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
		<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ssid_title" android:singleLine="true" />
			<TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/ap_ssid_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:singleLine="true" />
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
			<TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bssid_title" android:singleLine="true" />
			<TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/ap_bssid_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:singleLine="true" />
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
			<TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_title" />
			<EditText android:id="@id/ap_password_edit2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:singleLine="true" />
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_count_title" />
			<EditText android:id="@id/device_count_edit" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:inputType="number" />
		</LinearLayout>
		<RadioGroup android:orientation="horizontal" android:id="@id/package_mode_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<RadioButton android:id="@id/package_broadcast" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/package_broadcast" />
			<RadioButton android:id="@id/package_multicast" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/package_multicast" />
		</RadioGroup>
		<TextView android:textColor="@android:color/holo_red_dark" android:id="@id/message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
		<Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
		<Button android:id="@id/confirm_btn2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/confirm" />
		<TextView android:textSize="16.0sp" android:id="@id/version_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>
