<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<RelativeLayout android:gravity="center" android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="@dimen/dialog_header_height">
		<TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/colorWhite" android:id="@id/txtTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_text_picker_title" fontPath="fonts/IRANSansMobile_Bold.ttf" />
	</RelativeLayout>
	<ImageView android:id="@id/titleSeparator" android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="3.0dip" android:contentDescription="@null" />
	<RelativeLayout android:gravity="center" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin">
		<EditText android:id="@id/txtText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:textDirection="rtl" android:textAlignment="center" />
	</RelativeLayout>
	<CheckBox android:theme="@style/Platform.MaterialComponents.Light" android:layout_gravity="right" android:id="@id/checkbox_id" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_marginRight="@dimen/activity_vertical_margin" android:text="@string/limited_access" android:textDirection="rtl" android:layoutDirection="rtl" />
	<TextView android:textSize="14.0sp" android:id="@id/text_warning" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/warning_limited_access" />
</LinearLayout>
